# engineering-decision-intelligence

./: .gitignore  AGENTS.md  README.md  pyproject.toml
connector-inputs/: deployment-events.json  github-actions-runs.json  github-repositories.json  incidents.json  remediation-reviews.json  runtime-telemetry.json
edi/: __init__.py  __main__.py  dip.py  dip_contracts.py  dip_trust_loop.py  product_api.py  product_ui.py  substrate.py  v2.py  v3.py  v4.py  v5.py
policies/: README.md  autonomy-policy.json  control-remediation-status.json  github-control-baseline.json  incident-fixtures.json  ml-accepted-exceptions.json  ml-canonical-artifacts.json  ml-false-positive-review.json  ml-owner-map.json  ml-owner-suggestions.json  ml-pilot-policy.json  ml-readonly-patterns.json  portfolio-repositories.json  runtime-connector-fixtures.json  v2-remediation-state.json
roadmap/: autopilot-backlog.json  dip-governed-decision-review-backlog.json  dip-v0.2-backlog.json  v1.5-operationalization-backlog.json  v2-operational-intelligence-backlog.json  v3-operationalization-backlog.json  v4-live-enforcement-readiness-backlog.json  v5-target-installation-live-evidence-backlog.json
runtime-config/: ci-enforcement-policy.json  deployment-packaging.json  dip-readiness.json  dip-targets.json  external-pilot-operation.json  live-connectors.json  onepassword-secret-refs.json  operational-slos.json  operational-substrate-live-evidence.json  operational-substrate.json  persistence-model.json  reconciliation-schedule.json  remediation-operating-model.json  security-access-model.json  (+3 more)
(+324 files in other folders)
