[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-decision-intelligence"
version = "0.1.0"
description = "Safe engineering decision intelligence scanner and autopilot CLI"
readme = "docs/mvp/ML_PILOT_SCANNER_USAGE.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
edi = "edi.__main__:main"

[tool.setuptools]
packages = ["edi"]
py-modules = []
